# STM32-APP-SHELL

./: CMakeLists.txt  CMakePresets.json  README.md
CMake/: arm-none-eabi-gcc.cmake  lsm_add_common_flags.cmake  lsm_add_linker_flags.cmake
Core/App/: main.c
Devices/stm32f103/: CMakeLists.txt  Makefile  cmake_install.cmake  linker.ld  startup-example.c  startup.c
Devices/stm32f103/HL_drivers/: bus.c  bus.h  gpio.c  gpio.h  i2c.c  i2c.h  rcc.c  rcc.h  swd.c  swd.h  util.c  util.h
Devices/stm32f103/ll_drivers/: stm32f1xx.h  stm32f1xx_ll_exti.h
ProjectConfig/: devconf.h
